@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-18T01:03:54Z",
-  "count_outdated" : 398,
-  "uniques_outdated" : 216,
+  "timestamp" : "2022-07-18T16:17:56Z",
+  "count_outdated" : 399,
+  "uniques_outdated" : 217,
   "count" : 424,
   "uniques" : 229,
   "clones" : [
-    {
-      "timestamp": "2022-07-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-05T00:00:00Z",
       "count": 3,
